# search_py

./: .gitignore  README.md  pyproject.toml  stop.txt
search_py/: filedb.py  index.py  main.py  models.py  tknizer.py
tests/: test_filedb.py  test_index.py
tests/data/: code_1.py
