[tool.poetry]
name = "search-py"
version = "0.1.0"
description = ""
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"
packages = [{include = "search_py"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
search-cli = 'search_py.main:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
